--- a/src/app/cadastrar/cadastrar.component.css
+++ b/src/app/cadastrar/cadastrar.component.css
@@ -1,6 +1,6 @@
 #img-bg{
-    background-image: url('https://cdn.awsli.com.br/1000x1000/776/776651/produto/70096972/0218191535.jpg');
-    min-height: 1000px;
+    background-image: url('../assets/img/cadastrar.jpg');
+    min-height: 900px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
