--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -2,55 +2,55 @@
 
     <div class="row">
 
-        <div class="col-md-6" id='img-bg'></div>
+    <div class="col-md-6" id='img-bg'></div>
 
-        <div class="col-md-6 mt-5 mb-5">
+    <div class="col-md-6 mt-5 mb-5">
 
             <div class="row d-flex justify-content-center">
-
                 <div class="col-md-10">
+        
                     <h1 class="text-center">Cadastro</h1>
-
+        
                     <div class="form-group">
-                        <label for="nome">Nome</label><br>
-                        <input class='form-control' type="text" name="nome" id="nome" placeholder="Seu nome"><br>
+                    <label for="nome">Nome</label>
+                    <input class="form-control" type="text" name="nome" id="nome" placeholder="Seu nome"><br>
                     </div>
-
+        
                     <div class="form-group">
-                        <label for="usuario">Usuário</label><br>
-                        <input class='form-control' type="text" name="usuario" id="usuario" placeholder="Seu usuário"><br>
+                    <label for="usuario">Usuário</label>
+                    <input class="form-control" type="text" name="usuario" id="usuario" placeholder="Seu usuário"><br>
                     </div>
-
+        
                     <div class="form-group">
-                        <label for="foto">Link da Foto</label><br>
-                        <input class='form-control' type="text" name="foto" id="foto" placeholder="Link da sua foto"><br>
+                    <label for="foto">Link da Foto</label>
+                    <input class="form-control" type="text" name="foto" id="foto" placeholder="Link da sua foto"><br>
                     </div>
-
+        
                     <div class="form-group">
-                        <label for="senha">Senha</label><br>
-                        <input class='form-control' type="password" name="senha" id="senha" placeholder="Sua senha"><br>
+                    <label for="senha">Senha</label>
+                    <input class="form-control" type="password" name="senha" id="senha" placeholder="Sua senha"><br>
                     </div>
-
+        
                     <div class="form-group">
-                        <label for="confirmSenha">Confirmar Senha</label><br>
-                        <input class='form-control' type="password" name="confirmSenha" id="confirmSenha" placeholder="Confirme sua senha"><br>
+                    <label for="confirmSenha">Confirmar Senha</label>
+                    <input class="form-control" type="password" name="confirmSenha" id="confirmSenha"
+                        placeholder="Confirme sua senha"><br>
                     </div>
-
+        
                     <div class="form-group">
-                        <label for="tipo">Tipo de Usuário</label><br>
-                        <select class='form-control' name="usuario" id="usuario">
-                            <option> Selecione um tipo de usuário:</option>
-                            <option value="normal">Normal</option>
-                            <option value="adm">Adminidtrador</option>
-                        </select><br>
+                    <label for="tipo">Tipo de Usuário</label>
+                    <select class="form-control" name="tipo" id="tipo">
+                        <option>Selecione um tipo de usuário:</option>
+                        <option value="normal">Normal</option>
+                        <option value="adm">Administrador</option>
+                    </select><br>
                     </div>
-
-                    <br>
-
+        
                     <div class="d-flex justify-content-center">
-                        <button type="submit" class="btn btn-danger mr-4" routerLink="/entrar" >Cancelar</button>
-                        <button type="submit" class="btn btn-success" >Cadastrar</button>
+                    <button type="submit" class="btn btn-danger mr-4" routerLink='/entrar'>Cancelar</button>
+                    <button type="submit" class="btn btn-success">Cadastrar</button>
                     </div>
+        
                 </div>
             </div>
         </div>
