--- a/src/app/entrar/entrar.component.css
+++ b/src/app/entrar/entrar.component.css
@@ -1,5 +1,5 @@
 #img-bg{
-    background-image: url('https://cdn2.stormgrounds.com/stormgrounds-cdn/media/Stormtrooper-under-Keyboard.jpg');
+    background-image: url('../assets/img/boasvindas.jpg');
     min-height: 900px;
     background-position: center;
     background-repeat: no-repeat;
