--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -12,45 +12,49 @@
                     <h1 class="text-center">Cadastro</h1>
         
                     <div class="form-group">
-                    <label for="nome">Nome</label>
-                    <input class="form-control" type="text" name="nome" id="nome" placeholder="Seu nome"><br>
+                        <label for="nome">Nome</label>
+                        <input [(ngModel)]='usuario.nome' class="form-control" type="text" name="nome" id="nome" placeholder="Digite o seu nome completo">
                     </div>
-        
+                    
                     <div class="form-group">
-                    <label for="usuario">Usuário</label>
-                    <input class="form-control" type="text" name="usuario" id="usuario" placeholder="Seu usuário"><br>
+                        <label for="usuario">Usuario</label>
+                        <input [(ngModel)]='usuario.usuario' class="form-control" type="text" name="usuario" id="usuario" placeholder="Digite o seu nome de usuario">
                     </div>
-        
+                    
                     <div class="form-group">
-                    <label for="foto">Link da Foto</label>
-                    <input class="form-control" type="text" name="foto" id="foto" placeholder="Link da sua foto"><br>
+                        <label for="senha">Senha</label>
+                        <input (input)='confirmSenha($event)' class="form-control" type="password" name="senha" id="senha" placeholder="Digite a sua senha">
                     </div>
-        
+                    
                     <div class="form-group">
-                    <label for="senha">Senha</label>
-                    <input class="form-control" type="password" name="senha" id="senha" placeholder="Sua senha"><br>
+                        <label for="confirmSenha">Confirmar senha</label>
+                        <input [(ngModel)] ='usuario.senha' class="form-control" type="password" name="confirmSenha" id="confirmSenha" placeholder="Confirme a sua senha">
                     </div>
-        
+                    
                     <div class="form-group">
-                    <label for="confirmSenha">Confirmar Senha</label>
-                    <input class="form-control" type="password" name="confirmSenha" id="confirmSenha"
-                        placeholder="Confirme sua senha"><br>
+                        <label for="foto">URL da foto</label>
+                        <input [(ngModel)] ='usuario.foto' class="form-control" type="text" name="foto" id="foto" placeholder="Insira a url da sua foto">
                     </div>
-        
+
                     <div class="form-group">
-                    <label for="tipo">Tipo de Usuário</label>
-                    <select class="form-control" name="tipo" id="tipo">
-                        <option>Selecione um tipo de usuário:</option>
-                        <option value="normal">Normal</option>
-                        <option value="adm">Administrador</option>
-                    </select><br>
+                        <label for="dataNasc">Data de Nascimento</label>
+                        <input [(ngModel)]="usuario.dataNascimento" class="form-control" type="date" name="dataNasc" id="dataNasc">
+                    </div> 
+
+                    <div class="form-group">
+                        <label for="tipo">Selecione o tipo de usuário</label>
+                        <select name="tipo" id="tipo" class="form-control" (change)='tipoUser($event)'>
+                            <option>Escolha um tipo de usuário</option>
+                            <option value="normal">Padrão</option>
+                            <option value="admin">Administrador</option>
+                        </select>
                     </div>
-        
+
                     <div class="d-flex justify-content-center">
-                    <button type="submit" class="btn btn-danger mr-4" routerLink='/entrar'>Cancelar</button>
-                    <button type="submit" class="btn btn-success">Cadastrar</button>
+                    <button routerLink='/entrar' type="button" class="btn btn-outline-danger mr-4">Cancelar</button>
+                    <button type="submit" class="btn btn-outline-success" (click)='cadastrar()'>Cadastrar</button>
                     </div>
-        
+
                 </div>
             </div>
         </div>
