--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -5,7 +5,7 @@
     <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
         <ul class="navbar-nav mr-auto d-flex align-items-center">
         <li class="nav-item active">
-            <img src="https://media-exp1.licdn.com/dms/image/C4E03AQHMlS48EjVHsQ/profile-displayphoto-shrink_100_100/0/1579013153370?e=1634774400&v=beta&t=gKFEFKLCM3DDIN96LB5lUR89dkmCz9WlJ5CajgzTmwQ" alt="Imagem do user" width="35px" height="35px" class="img-fluid rounded-circle">
+            <img src="https://avatars.githubusercontent.com/u/80726258?v=4" alt="Imagem do user" width="35px" height="35px" class="img-fluid rounded-circle">
         </li>
         
         <li class="nav-item pl-3">
@@ -14,16 +14,14 @@
     
         <li class="nav-item pl-3">
             <a href="">
-                <p class="text-white fs-16 m-0"><i class="fa fa-pencil-square-o " aria-hidden="true"></i></p>
+                <p class="text-white fs-16 m-0"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></p>
             </a>
         </li>
         </ul>
-
-        <ul class="navbar-nav ml-auto d-flex align-items-center">
-            <li class="nav-item pl-5">
-                <a class="m-0 fw-bold text-white fs-16">Sair <i class="fa fa-sign-out" aria-hidden="true"></i></a>
-            </li>
-        </ul>
-
     </div>
+    <ul class="navbar-nav ml-auto d-flex align-items-center">
+        <li class="nav-item pl-5">
+            <a class="m-0 font-weight-bold text-white fs-16">Sair<i class="fa fa-sign-out" aria-hidden="true"></i></a>
+        </li>
+    </ul>
 </nav>
