ajustes de consumo

--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -2,9 +2,9 @@
 
     <div class="row">
 
-    <div class="col-md-6" id='img-bg'></div>
+        <div class="col-md-6" id='img-bg'></div>
 
-    <div class="col-md-6 mt-5 mb-5">
+        <div class="col-md-6 mt-5 mb-5">
 
             <div class="row d-flex justify-content-center">
                 <div class="col-md-10">
@@ -13,40 +13,71 @@
         
                     <div class="form-group">
                         <label for="nome">Nome</label>
-                        <input [(ngModel)]='usuario.nome' class="form-control" type="text" name="nome" id="nome" placeholder="Digite o seu nome completo">
+                        <input class="form-control"
+                        type="text"
+                        name="nome"
+                        id="nome"
+                        placeholder="Seu nome"
+                        [(ngModel)]='usuario.nome'/>
                     </div>
                     
                     <div class="form-group">
-                        <label for="usuario">Usuario</label>
-                        <input [(ngModel)]='usuario.usuario' class="form-control" type="text" name="usuario" id="usuario" placeholder="Digite o seu nome de usuario">
+                        <label for="usuario">Usuário</label>
+                        <input class="form-control"
+                        type="text"
+                        name="usuario"
+                        id="usuario"
+                        placeholder="Seu usuário"
+                        [(ngModel)]='usuario.usuario'/>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="foto">URL da Foto</label>
+                        <input class="form-control"
+                        type="text"
+                        name="foto"
+                        id="foto"
+                        placeholder="Insira a url da sua foto"
+                        [(ngModel)]='usuario.foto'/>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="dataNascimento">Data de nascimento</label>
+                        <input class="form-control"
+                        type="date"
+                        name="dataNascimento"
+                        id="dataNascimento"
+                        placeholder="dd/mm/aaaa"
+                        [(ngModel)]='usuario.dataNascimento'/>
                     </div>
                     
                     <div class="form-group">
                         <label for="senha">Senha</label>
-                        <input (input)='confirmSenha($event)' class="form-control" type="password" name="senha" id="senha" placeholder="Digite a sua senha">
+                        <input class="form-control"
+                        type="password"
+                        name="senha"
+                        id="senha"
+                        placeholder="Sua senha"
+                        (input)='confirmSenha($event)'/>
                     </div>
-                    
+            
                     <div class="form-group">
-                        <label for="confirmSenha">Confirmar senha</label>
-                        <input [(ngModel)] ='usuario.senha' class="form-control" type="password" name="confirmSenha" id="confirmSenha" placeholder="Confirme a sua senha">
+                        <label for="confirmSenha">Confirmar Senha</label>
+                        <input class="form-control"
+                        type="password"
+                        name="confirmSenha"
+                        id="confirmSenha"
+                        placeholder="Confirme sua senha"
+                        [(ngModel)]='usuario.senha'/>
                     </div>
-                    
-                    <div class="form-group">
-                        <label for="foto">URL da foto</label>
-                        <input [(ngModel)] ='usuario.foto' class="form-control" type="text" name="foto" id="foto" placeholder="Insira a url da sua foto">
-                    </div>
-
-                    <div class="form-group">
-                        <label for="dataNasc">Data de Nascimento</label>
-                        <input [(ngModel)]="usuario.dataNascimento" class="form-control" type="date" name="dataNasc" id="dataNasc">
-                    </div> 
 
                     <div class="form-group">
                         <label for="tipo">Selecione o tipo de usuário</label>
-                        <select name="tipo" id="tipo" class="form-control" (change)='tipoUser($event)'>
-                            <option>Escolha um tipo de usuário</option>
-                            <option value="normal">Padrão</option>
-                            <option value="admin">Administrador</option>
+
+                        <select class="form-control" name="tipo" id="tipo" (change)='tipoUser($event)'>
+                            <option>Selecione um tipo de usuário:</option>
+                            <option value="normal">Usuário Padrão</option>
+                            <option value="adm">Usuário Administrador</option>
                         </select>
                     </div>
 
@@ -54,7 +85,6 @@
                     <button routerLink='/entrar' type="button" class="btn btn-outline-danger mr-4">Cancelar</button>
                     <button type="submit" class="btn btn-outline-success" (click)='cadastrar()'>Cadastrar</button>
                     </div>
-
                 </div>
             </div>
         </div>
