--- a/src/app/cadastrar/cadastrar.component.css
+++ b/src/app/cadastrar/cadastrar.component.css
@@ -1,5 +1,5 @@
 #img-bg{
-    background-image: url('../assets/img/cadastrar.jpg');
+    background-image: url('https://i.imgur.com/uUl87yj.jpg');
     min-height: 1000px;
     background-position: center;
     background-repeat: no-repeat;
