--- a/src/app/entrar/entrar.component.css
+++ b/src/app/entrar/entrar.component.css
@@ -1,5 +1,5 @@
 #img-bg{
-    background-image: url('../assets/img/boasvindas.jpg');
+    background-image: url('https://i.imgur.com/bXi1ay0.png');
     min-height: 1000px;
     background-position: center;
     background-repeat: no-repeat;
