--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -5,11 +5,11 @@
     <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
         <ul class="navbar-nav mr-auto d-flex align-items-center">
         <li class="nav-item active">
-            <img src="https://avatars.githubusercontent.com/u/80726258?v=4" alt="Imagem do user" width="35px" height="35px" class="img-fluid rounded-circle">
+            <img src="{{foto}}" alt="Imagem do user" width="35px" height="35px" class="img-fluid rounded-circle">
         </li>
         
         <li class="nav-item pl-3">
-            <p class="m-0 font-weight-bold text-white fs-16">Júlia Barão</p>
+            <p class="m-0 font-weight-bold text-white fs-16">Olá, {{nome}}</p>
         </li>
     
         <li class="nav-item pl-3">
@@ -21,7 +21,7 @@
     </div>
     <ul class="navbar-nav ml-auto d-flex align-items-center">
         <li class="nav-item pl-5">
-            <a class="m-0 font-weight-bold text-white fs-16">Sair<i class="fa fa-sign-out" aria-hidden="true"></i></a>
+            <a (click)='sair()' class="m-0 font-weight-bold text-white fs-16">Sair<i class="fa fa-sign-out" aria-hidden="true"></i></a>
         </li>
     </ul>
 </nav>
