adicionando a página de temas

--- a/src/app/tema/tema.component.css
+++ b/src/app/tema/tema.component.css
@@ -1,11 +1,11 @@
+#fundo{
+    background-color: rgb(167, 167, 167);
+}
+
 .fs-54{
     font-size: 54pt;
 }
 
 .fs-18{
     font-size: 18pt;
-}
-
-#cor{
-    background-color: pink;
 }
