--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-    <div class="row bg-secondary d-flex align-items-center">
+    <div class="row d-flex align-items-center" id="cor">
         <div class="col-md-6">
             <div class="row d-flex justify-content-center">
                 <div class="col-md-6 text-white">
@@ -62,16 +62,18 @@
                     <textarea name="texto" id="texto" class="form-control" rows="4" placeholder="Digite sua postagem"></textarea>
                 </div>
                 <div class="form-group">
-                    <label for="texto">Escolha um tema ou <a href="">cadastre um novo</a>: </label>
+                    <label for="texto">Escolha um tema ou <a data-dismiss="modal" routerLink='/tema'>cadastre um novo</a>: </label>
                     <select name="tema" id="tema" class="form-control">
                         <option value="">Temas</option>
                     </select>
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-danger" data-dismiss="modal">Cancelar</button>
-                <button type="button" class="btn btn-success">Publicar</button>
+                <button type="button" class="btn btn-outline-danger" data-dismiss="modal">Cancelar</button>
+                <button type="button" class="btn btn-outline-success">Publicar</button>
             </div>
         </div>
     </div>
 </div>
+
+
