--- a/src/app/rodape/rodape.component.css
+++ b/src/app/rodape/rodape.component.css
@@ -16,23 +16,30 @@ ul.social-network li{
 }
 
 .fa-facebook-official:hover{
-    color: pink;
+    color: #3b5998;;
 }
 
 .fa-instagram:hover{
-    color: pink;
+    background: linear-gradient(180deg, rgba(251,255,0,1) 0%,  rgba(255,0,221,1) 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 .fa-linkedin:hover{
-    color: pink;
+    color: #0072b1;
 }
 
 .fa-github:hover{
-    color: pink;
+    color: purple;
 }
 
 .fa-copyright{
     font-size: 15px;
     margin: 0;
     padding: 5px;
+}
+
+#cor{
+    background-color: rgb(167, 167, 167);
 }
