--- a/src/app/tema/tema.component.html
+++ b/src/app/tema/tema.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <div class="row" id="fundo">
         <div class="col-md-12 text-white">
-            <a routerLink='/inicio' class="btn btn-dark" type="button" >
+            <a routerLink='/inicio' class="btn btn-outline-light"  type="button" >
             <i class="fa fa-angle-double-left" aria-hidden="true"></i> INÍCIO
             </a>
 
@@ -12,12 +12,12 @@
                 <div class="col-md-3">
                     <div class="form-group">
 
-                        <input type="text" class="form-control" id="descricao" placeholder="Digite a descrição do tema">
+                        <input [(ngModel)]="tema.descricao" type="text" class="form-control" id="descricao" placeholder="Digite a descrição do tema">
 
                     </div>
 
                     <div class="d-flex justify-content-center">
-                        <button class="btn btn-outline-light">Cadastrar</button>
+                        <button class="btn btn-outline-light" (click)='cadastrar()'>Cadastrar</button>
                     </div>
 
                 </div>
@@ -41,28 +41,19 @@
                 <thead>
                 <tr>
                     <th scope="col">#</th>
-                    <th scope="col">Primeiro</th>
-                    <th scope="col">Último</th>
-                    <th scope="col">Nickname</th>
+                    <th scope="col">Descrição</th>
+                    <th scope="col" class="text-right">Modificações</th>
                     </tr>
                 </thead>
+
                 <tbody>
-                <tr>
-                    <th scope="row">1</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                </tr>
-                <tr>
-                    <th scope="row">2</th>
-                    <td>Jacob</td>
-                    <td>Thornton</td>
-                    <td>@fat</td>
-                </tr>
-                <tr>
-                    <th scope="row">3</th>
-                    <td colspan="2">Larry the Bird</td>
-                    <td>@twitter</td>
+                <tr *ngFor='let item of listaTemas'>
+                    <th>{{item.id}}</th>
+                    <td>{{item.descricao}}</td>
+                    <td class="d-flex justify-content-end">
+                        <button class="btn btn-outline-info mr-3" [routerLink]="['/tema-edit', item.id]">Editar</button>
+                        <button class="btn btn-outline-danger" [routerLink]="['/tema-delete', item.id]">Deletar</button>
+                    </td>
                 </tr>
                 </tbody>
             </table>
