--- a/src/app/tema/tema.component.html
+++ b/src/app/tema/tema.component.html
@@ -42,7 +42,7 @@
                 <tr>
                     <th scope="col">#</th>
                     <th scope="col">Descrição</th>
-                    <th scope="col" class="text-right">Modificações</th>
+                    <th scope="col" class="text-center">Modificações</th>
                     </tr>
                 </thead>
 
@@ -50,7 +50,7 @@
                 <tr *ngFor='let item of listaTemas'>
                     <th>{{item.id}}</th>
                     <td>{{item.descricao}}</td>
-                    <td class="d-flex justify-content-end">
+                    <td class="d-flex justify-content-center">
                         <button class="btn btn-outline-info mr-3" [routerLink]="['/tema-edit', item.id]">Editar</button>
                         <button class="btn btn-outline-danger" [routerLink]="['/tema-delete', item.id]">Deletar</button>
                     </td>
