--- a/src/app/edit/postagem-edit/postagem-edit.component.html
+++ b/src/app/edit/postagem-edit/postagem-edit.component.html
@@ -1,1 +1,31 @@
-<p>postagem-edit works!</p>
+<div class="container mt-5 mb-5">
+
+    <div class="row">
+        <div class="col-md-12">
+            <h1 class="text-center text-secondary">Atualizar Postagens</h1>
+        </div>
+    </div>
+
+    <div class="row d-flex justify-content-center">
+        <div class="col-md-6">
+                <div class="form-group">
+                    <label for="titulo">Título</label>
+                    <input [(ngModel)]='postagens.titulo' type="text" class="form-control" id="titulo" placeholder="Digite o título da sua postagem">
+                </div>
+                <div class="form-group">
+                    <label for="texto">Texto</label>
+                    <textarea [(ngModel)]='postagens.texto' name="texto" id="texto" class="form-control" rows="4" placeholder="Digite sua postagem"></textarea>
+                </div>
+                <div class="form-group">
+                    <label for="texto">Escolha um tema:</label>
+                    <select name="tema" id="tema" class="form-control" [(ngModel)]='idTema' (change)='findByIdTema()'>
+                        <option *ngFor='let item of listaTemas' value="{{item.id}}">{{item.descricao}}</option>
+                    </select>
+                </div>
+                <div class="d-flex justify-content-center">
+                    <button class="btn btn-outline-danger mr-4" routerLink='/inicio'>Cancelar</button>
+                    <button class="btn btn-outline-success" (click)='atualizar()'>Atualizar</button>
+                </div>
+            </div>
+    </div>
+</div>
