Tamanho das imagens

--- a/src/app/entrar/entrar.component.css
+++ b/src/app/entrar/entrar.component.css
@@ -1,6 +1,6 @@
 #img-bg{
-    background-image: url('https://i.imgur.com/bXi1ay0.png');
-    min-height: 1000px;
+    background-image: url('../../assets/imgs/juonline.jfif');
+    min-height: 100vh;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
