--- a/src/app/cadastrar/cadastrar.component.css
+++ b/src/app/cadastrar/cadastrar.component.css
@@ -1,5 +1,5 @@
 #img-bg{
-    background-image: url('../../assets/imgs/jutatto.jfif');
+    background-image: url('../../assets/imgs/juedit.jfif');
     min-height: 100vh;
     background-position: center;
     background-repeat: no-repeat;
