--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -1,94 +1,95 @@
-<div class="container-fluid">
-    <div class="row d-flex align-items-center" id="cor">
+<div class="container col-md-12"  id="cor">
+    <div class="row d-flex align-items-center">
         <div class="col-md-6">
             <div class="row d-flex justify-content-center">
-                <div class="col-md-6 text-white">
+                <div class="col-md-6 text-cor">
                     <h1 class="fs-54">Seja bem vinda(o)!</h1>
                     <h5 class="fs-18">expresse aqui seus pensamentos e opniões!</h5>
                 </div>
             </div>
             <div class="row d-flex justify-content-center mt-3 mb-5">
             <div class="col-md-6">
-                <button class="btn btn-light mr-2" data-toggle="modal" data-target="#novaPostagem">Nova Postagem</button>
-                <a href="#postagens" class="btn btn-outline-light">Ver Postagens</a>
+                <button class="btn btn-dark mr-2" data-toggle="modal" data-target="#novaPostagem">Nova Postagem</button>
+                <a href="#postagens" class="btn btn-outline-dark">Ver Postagens</a>
                 
             </div>
             </div>
         </div>
         <div class="col-md-6 d-flex justify-content-center">
-            <img src="https://i.imgur.com/Hx8iJEY.png" alt="Imagem de fundo" width="500px" height="500px"/>
+            <img src="../../assets/imgs/13.jfif" alt="Imagem de fundo" width="500px" height="500px"/>
         </div>
     </div>
 </div>
+<div class="container-fluid mt-5">
+    <div class="container" id="postagens">
+        <nav>
+            <div class="nav nav-tabs d-flex justify-content-center" id="nav-tab" role="tablist">
+                <a class="nav-link active text-secondary font-weight-bold" id="todasPostagens-tab" data-toggle="tab" href="#todasPostagens" role="tab" aria-controls="todasPostagens" aria-selected="true">Todas Postagens</a>
+        
+                <a (click)='findByIdUsuario()' class="nav-link text-secondary font-weight-bold" id="minhasPostagens-tab" data-toggle="tab" href="#minhasPostagens" role="tab" aria-controls="minhasPostagens" aria-selected="false">Minhas Postagens</a>
+        
+                <a class="nav-link text-secondary font-weight-bold" id="postagensTema-tab" data-toggle="tab" href="#postagensTema" role="tab" aria-controls="postagensTema" aria-selected="false">Postagens por Tema</a>
+            </div>
+        </nav>
 
-<div class="container mb-5 mt-5" id="postagens">
-    <nav>
-        <div class="nav nav-tabs d-flex justify-content-center" id="nav-tab" role="tablist">
-            <a class="nav-link active text-secondary font-weight-bold" id="todasPostagens-tab" data-toggle="tab" href="#todasPostagens" role="tab" aria-controls="todasPostagens" aria-selected="true">Todas Postagens</a>
-    
-            <a (click)='findByIdUsuario()' class="nav-link text-secondary font-weight-bold" id="minhasPostagens-tab" data-toggle="tab" href="#minhasPostagens" role="tab" aria-controls="minhasPostagens" aria-selected="false">Minhas Postagens</a>
-    
-            <a class="nav-link text-secondary font-weight-bold" id="postagensTema-tab" data-toggle="tab" href="#postagensTema" role="tab" aria-controls="postagensTema" aria-selected="false">Postagens por Tema</a>
-        </div>
-    </nav>
+        <div class="tab-content  mt-5" id="nav-tabContent">
+            <div class="tab-pane fade show active" id="todasPostagens" role="tabpanel" aria-labelledby="todasPostagens-tab">   <!-- todasPostagens -->
+                <div class="row d-flex justify-content-center mb-5 mt-5">
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            <input type="text" class="form-control" id="titulo" placeholder="Pesquise o título de uma postagem" [(ngModel)]='tituloPost' (keyup)='findByTituloPostagem()'>
+                        </div>
+                    </div>
+                </div>
 
-    <div class="tab-content my-4 mt-5" id="nav-tabContent">
-        <div class="tab-pane fade show active" id="todasPostagens" role="tabpanel" aria-labelledby="todasPostagens-tab">   <!-- todasPostagens -->
-            <div class="row d-flex justify-content-center mb-5 mt-5">
-                <div class="col-md-4">
-                    <div class="form-group">
-                        <input type="text" class="form-control" id="titulo" placeholder="Pesquise o título de uma postagem" [(ngModel)]='tituloPost' (keyup)='findByTituloPostagem()'>
+                <div class="card-columns">
+                    <div class="card text-center" *ngFor='let item of listaPostagens | orderBy : key : reverse'>
+                        <div class="card-body">
+                            <h5 class="card-title m-0">{{item.titulo}}</h5>
+                            <small class="text-muted">Tema: {{item.tema.descricao}}</small>
+                            <p class="card-text mt-3">{{item.texto}}</p>
+                            <p class="card-text"><small class="text-muted">{{item.data | date: 'dd/MM/yyyy'}} às {{item.data | date: 'HH:mm'}}</small></p>
+                            <p class="card-text"><small class="text-muted">by: {{item.usuario.nome}}</small></p>
+                        </div>
                     </div>
                 </div>
             </div>
 
-            <div class="card-columns">
-                <div class="card text-center" *ngFor='let item of listaPostagens | orderBy : key : reverse'>
-                    <div class="card-body">
-                        <h5 class="card-title m-0">{{item.titulo}}</h5>
-                        <small class="text-muted">Tema: {{item.tema.descricao}}</small>
-                        <p class="card-text mt-3">{{item.texto}}</p>
-                        <p class="card-text"><small class="text-muted">{{item.data | date: 'dd/MM/yyyy'}} às {{item.data | date: 'HH:mm'}}</small></p>
-                        <p class="card-text"><small class="text-muted">by: {{item.usuario.nome}}</small></p>
-                    </div>
-                </div>
-            </div>
-        </div>
+            <div class="tab-pane fade" id="minhasPostagens" role="tabpanel" aria-labelledby="minhasPostagens-tab">  <!-- minhasPostagens -->
+                <div class="card-columns">  
+                    <div class="card text-center" *ngFor='let item of usuario.postagens | orderBy : key : reverse'>
+                        <div class="card-body">
+                            <h5 class="card-title m-0">{{item.titulo}}</h5>
+                            <small class="text-muted">Tema: {{item.tema.descricao}}</small>
+                            <p class="card-text mt-3">{{item.texto}}</p>
+                            <p class="card-text"><small class="text-muted">{{item.data | date: 'dd/MM/yyyy'}} às {{item.data | date: 'HH:mm'}}</small></p>
 
-        <div class="tab-pane fade" id="minhasPostagens" role="tabpanel" aria-labelledby="minhasPostagens-tab">  <!-- minhasPostagens -->
-            <div class="card-columns">  
-                <div class="card text-center" *ngFor='let item of usuario.postagens | orderBy : key : reverse'>
-                    <div class="card-body">
-                        <h5 class="card-title m-0">{{item.titulo}}</h5>
-                        <small class="text-muted">Tema: {{item.tema.descricao}}</small>
-                        <p class="card-text mt-3">{{item.texto}}</p>
-                        <p class="card-text"><small class="text-muted">{{item.data | date: 'dd/MM/yyyy'}} às {{item.data | date: 'HH:mm'}}</small></p>
+                            <a [routerLink]="['/postagem-edit', item.id]" class="text-info mr-3" href="">Editar</a>
+                            <a [routerLink]="['/postagem-delete', item.id]" class="text-danger" href="">Apagar</a>
 
-                        <a [routerLink]="['/postagem-edit', item.id]" class="text-info mr-3" href="">Editar</a>
-                        <a [routerLink]="['/postagem-delete', item.id]" class="text-danger" href="">Apagar</a>
-
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="tab-pane fade" id="postagensTema" role="tabpanel" aria-labelledby="postagensTema-tab">   <!-- PostagensTema -->
-
-            <div class="row d-flex justify-content-center mb-5 mt-5">
-                <div class="col-md-4">
-                    <div class="form-group">
-                        <input type="text" class="form-control" id="titulo" placeholder="Pesquise um tema" [(ngModel)]='nomeTema' (keyup)='findByNomeTema()'>
+                        </div>
                     </div>
                 </div>
             </div>
 
-            <div class="card-columns" *ngFor='let tema of listaTemas'>
-                <div class="card text-center" *ngFor='let item of tema.postagens | orderBy : key : reverse'>
-                    <div class="card-body">
-                        <h5 class="card-title m-0">{{item.titulo}}</h5>
-                        <p class="card-text mt-3">{{item.texto}}</p>
-                        <p class="card-text"><small class="text-muted">{{item.data | date: 'dd/MM/yyyy'}} às {{item.data | date: 'HH:mm'}}</small></p>
-                        <p class="card-text"><small class="text-muted">by: {{item.usuario.nome}}</small></p>
+            <div class="tab-pane fade" id="postagensTema" role="tabpanel" aria-labelledby="postagensTema-tab">   <!-- PostagensTema -->
+
+                <div class="row d-flex justify-content-center mb-5 mt-5">
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            <input type="text" class="form-control" id="titulo" placeholder="Pesquise um tema" [(ngModel)]='nomeTema' (keyup)='findByNomeTema()'>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card-columns" *ngFor='let tema of listaTemas'>
+                    <div class="card text-center" *ngFor='let item of tema.postagens | orderBy : key : reverse'>
+                        <div class="card-body">
+                            <h5 class="card-title m-0">{{item.titulo}}</h5>
+                            <p class="card-text mt-3">{{item.texto}}</p>
+                            <p class="card-text"><small class="text-muted">{{item.data | date: 'dd/MM/yyyy'}} às {{item.data | date: 'HH:mm'}}</small></p>
+                            <p class="card-text"><small class="text-muted">by: {{item.usuario.nome}}</small></p>
+                        </div>
                     </div>
                 </div>
             </div>
