--- a/src/app/rodape/rodape.component.html
+++ b/src/app/rodape/rodape.component.html
@@ -30,7 +30,7 @@
             </div>
         </div>
     </div>
-    <div class="footer-copyright bg-dark text-center py-3">
+    <div class="footer-copyright bgdark text-center py-3">
         <span class="text-light">Todos os direitos reservados: Júlia Barão<i class="fa fa-copyright" aria-hidden="true"></i></span>
     </div>
 </footer>
