--- a/src/app/tema/tema.component.html
+++ b/src/app/tema/tema.component.html
@@ -1,5 +1,5 @@
-<div class="container-fluid">
-    <div class="row" id="fundo">
+<div class="container-fluid" id="fundo">
+    <div class="row">
         <div class="col-md-12 text-white">
             <a routerLink='/inicio' class="btn btn-outline-light"  type="button" >
             <i class="fa fa-angle-double-left" aria-hidden="true"></i> INÍCIO
@@ -26,37 +26,36 @@
         </div>
     </div>
 
-</div>
-
-<div class="container">
-    <div class="row mt-5">
-        <div class="col-md-12">
-            <h2 class="text-center">Todos os Temas</h2>
+    <div class="container text-white">
+        <div class="row mt-5">
+            <div class="col-md-12">
+                <h2 class="text-center">Todos os Temas</h2>
+            </div>
         </div>
-    </div>
 
-    <div class="row mt-3 mb-5 d-flex justify-content-center">
-        <div class="col-md-6">
-            <table class="table table-hover">
-                <thead>
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Descrição</th>
-                    <th scope="col" class="text-center">Modificações</th>
+        <div class="row mt-3d-flex justify-content-center">
+            <div class="col-md-6">
+                <table class="table table-hover text-white">
+                    <thead>
+                    <tr>
+                        <th scope="col">id</th>
+                        <th scope="col">Descrição</th>
+                        <th scope="col" class="text-center">Modificações</th>
+                        </tr>
+                    </thead>
+
+                    <tbody>
+                    <tr *ngFor='let item of listaTemas'>
+                        <th>{{item.id}}</th>
+                        <td>{{item.descricao}}</td>
+                        <td class="d-flex justify-content-center">
+                            <button class="btn btn-outline-info mr-3" [routerLink]="['/tema-edit', item.id]">Editar</button>
+                            <button class="btn btn-outline-danger" [routerLink]="['/tema-delete', item.id]">Deletar</button>
+                        </td>
                     </tr>
-                </thead>
-
-                <tbody>
-                <tr *ngFor='let item of listaTemas'>
-                    <th>{{item.id}}</th>
-                    <td>{{item.descricao}}</td>
-                    <td class="d-flex justify-content-center">
-                        <button class="btn btn-outline-info mr-3" [routerLink]="['/tema-edit', item.id]">Editar</button>
-                        <button class="btn btn-outline-danger" [routerLink]="['/tema-delete', item.id]">Deletar</button>
-                    </td>
-                </tr>
-                </tbody>
-            </table>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 </div>
