--- a/src/app/entrar/entrar.component.css
+++ b/src/app/entrar/entrar.component.css
@@ -1,5 +1,5 @@
 #img-bg{
-    background-image: url('../../assets/imgs/juonline.jfif');
+    background-image: url('../../assets/imgs/novo.jpg');
     min-height: 100vh;
     background-position: center;
     background-repeat: no-repeat;
